[package]
name = "polkadot-runtime"
version = "0.8.25"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.17.4", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
log = { version = "0.3.9", optional = true }
rustc-hex = { version = "2.0.1", default-features = false }
serde = { version = "1.0.102", default-features = false }
serde_derive = { version = "1.0.102", optional = true }
static_assertions = "1.1.0"
smallvec = "1.4.1"

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
sp-api = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
inherents = { package = "sp-inherents", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
sp-std = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
sp-io = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
sp-runtime = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
sp-staking = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
sp-core = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
sp-session = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
sp-version = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }

pallet-authority-discovery = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-authorship = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-babe = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-balances = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-transaction-payment = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-collective = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-democracy = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-elections-phragmen = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
frame-executive = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-finality-tracker = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-grandpa = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-identity = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-im-online = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-indices = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-membership = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-multisig = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-nicks = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-offences = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-proxy = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-randomness-collective-flip = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-scheduler = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-session = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
frame-support = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-staking = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-staking-reward-curve = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
frame-system = {git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
frame-system-rpc-runtime-api = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-timestamp = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-treasury = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-vesting = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }
pallet-utility = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.25" }

frame-benchmarking = { git = "https://github.com/insipx/substrate", default-features = false, optional = true , branch = "insipx/testing-0.8.25" }
frame-system-benchmarking = { git = "https://github.com/insipx/substrate", default-features = false, optional = true , branch = "insipx/testing-0.8.25" }
pallet-offences-benchmarking = { git = "https://github.com/insipx/substrate", default-features = false, optional = true , branch = "insipx/testing-0.8.25" }
pallet-session-benchmarking = { git = "https://github.com/insipx/substrate", default-features = false, optional = true , branch = "insipx/testing-0.8.25" }
hex-literal = { version = "0.2.1", optional = true }

runtime-common = { package = "polkadot-runtime-common", path = "../common", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"
libsecp256k1 = "0.3.2"
tiny-keccak = "1.5.0"
keyring = { package = "sp-keyring", git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
sp-trie = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.25" }
trie-db = "0.22.0"
serde_json = "1.0.41"

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.6" }

[features]
default = ["std"]
no_std = []
only-staking = []
with-tracing = ["sp-io/with-tracing"]
std = [
	"authority-discovery-primitives/std",
	"pallet-authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"codec/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"sp-std/std",
	"frame-support/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-collective/std",
	"pallet-elections-phragmen/std",
	"pallet-democracy/std",
	"frame-executive/std",
	"pallet-finality-tracker/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-multisig/std",
	"pallet-nicks/std",
	"pallet-offences/std",
	"pallet-proxy/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-timestamp/std",
	"pallet-treasury/std",
	"sp-version/std",
	"serde_derive",
	"serde/std",
	"log",
	"pallet-babe/std",
	"babe-primitives/std",
	"sp-session/std",
	"pallet-randomness-collective-flip/std",
	"runtime-common/std",
	"pallet-vesting/std",
	"pallet-utility/std",
]
runtime-benchmarks = [
	"runtime-common/runtime-benchmarks",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
	"hex-literal",
]

# When enabled, the runtime api will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime api exported functions
# in WASM.
disable-runtime-api = []
