[package]
name = "rococo-v1-runtime"
version = "0.8.26-1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", default-features = false }
serde_derive = { version = "1.0.102", optional = true }
smallvec = "1.4.1"

frame-support = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
sp-api = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
sp-io = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
sp-std = { package = "sp-std", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
sp-runtime = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
sp-session = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
sp-staking = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
sp-core = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
sp-version = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }

tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
inherents = { package = "sp-inherents", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }

pallet-authority-discovery = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
pallet-authorship = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
pallet-babe = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
pallet-balances = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
pallet-session = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
pallet-im-online = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
pallet-indices = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
pallet-transaction-payment = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
pallet-staking = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
pallet-staking-reward-curve = { package = "pallet-staking-reward-curve", git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
frame-executive = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
pallet-grandpa = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
pallet-timestamp = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
pallet-offences = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }

frame-system = {git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
frame-system-rpc-runtime-api = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }

runtime-common = { package = "polkadot-runtime-common", path = "../common", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }
polkadot-parachain = { path = "../../parachain", default-features = false }
runtime-parachains = { package = "polkadot-runtime-parachains", path = "../parachains", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "2.0.0" }

[features]
default = ["std"]
no_std = []
std = [
	"authority-discovery-primitives/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"babe-primitives/std",
	"pallet-balances/std",
	"codec/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-indices/std",
	"pallet-im-online/std",
	"inherents/std",
	"frame-support/std",
	"polkadot-parachain/std",
	"primitives/std",
	"runtime-common/std",
	"runtime-parachains/std",
	"pallet-session/std",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"pallet-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"offchain-primitives/std",
	"pallet-offences/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"block-builder-api/std",
	"tx-pool-api/std",
	"sp-version/std",
	"serde_derive",
	"serde/std",
]
# When enabled, the runtime api will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime api exported functions
# in WASM.
disable-runtime-api = []
