[package]
name = "rococo-runtime"
version = "0.8.26"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
parity-scale-codec = { version = "1.3.5", default-features = false, features = ["derive"] }
serde = { version = "1.0.117", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
smallvec = "1.5.0"

frame-support = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
sp-api = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
sp-io = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
sp-std = { package = "sp-std", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
sp-runtime = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
sp-session = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
sp-staking = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
sp-core = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
sp-version = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }

tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
inherents = { package = "sp-inherents", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }

pallet-authority-discovery = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
pallet-authorship = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
pallet-babe = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
pallet-sudo = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
pallet-balances = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
pallet-session = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
pallet-im-online = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
pallet-indices = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
pallet-transaction-payment = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
pallet-staking = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
pallet-staking-reward-curve = { package = "pallet-staking-reward-curve", git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
frame-executive = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
pallet-grandpa = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
pallet-timestamp = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
pallet-offences = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }

frame-system = {git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }
frame-system-rpc-runtime-api = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing" }

runtime-common = { package = "polkadot-runtime-common", path = "../common", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }
polkadot-parachain = { path = "../../parachain", default-features = false }
runtime-parachains = { package = "polkadot-runtime-parachains", path = "../parachains", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "2.0.0" }

[features]
default = ["std"]
no_std = []
std = [
	"authority-discovery-primitives/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"babe-primitives/std",
	"pallet-balances/std",
	"parity-scale-codec/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-indices/std",
	"pallet-im-online/std",
	"inherents/std",
	"frame-support/std",
	"polkadot-parachain/std",
	"primitives/std",
	"runtime-common/std",
	"runtime-parachains/std",
	"pallet-session/std",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"pallet-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"offchain-primitives/std",
	"pallet-offences/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"block-builder-api/std",
	"tx-pool-api/std",
	"sp-version/std",
	"serde_derive",
	"serde/std",
]
# When enabled, the runtime api will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime api exported functions
# in WASM.
disable-runtime-api = []
