[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "xcm-builder"
description = "Tools & types for building with XCM and its executor."
version = "0.8.22"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }
sp-std = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
sp-arithmetic = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
sp-io = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
sp-runtime = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
frame-support = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }

# Polkadot dependencies
polkadot-parachain = { path = "../../parachain", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"xcm/std",
	"xcm-executor/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"polkadot-parachain/std",
]
