[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "xcm-executor"
description = "An abstract and configurable XCM message executor."
version = "0.8.22"

[dependencies]
impl-trait-for-tuples = "0.1.3"
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
xcm = { path = "..", default-features = false }
sp-std = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
sp-io = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
sp-arithmetic = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
sp-core = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
sp-runtime = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }
frame-support = { git = "https://github.com/insipx/substrate", default-features = false , branch = "insipx/testing-0.8.26-1" }

[features]
default = ["std"]
std = [
	"codec/std",
	"xcm/std",
	"sp-std/std",
	"sp-io/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
]
