[package]
name = "polkadot-test-client"
version = "0.8.26"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "1.3.5", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sc-service = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sc-block-builder = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sc-consensus = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sp-blockchain = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sp-runtime = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sp-inherents = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sp-core = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sp-api = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sp-timestamp = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sp-consensus = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
sp-state-machine = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/insipx/substrate", branch = "insipx/testing" }
