[package]
name = "polkadot-test-client"
version = "0.8.26-1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sc-service = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sc-block-builder = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sc-consensus = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sp-blockchain = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sp-runtime = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sp-inherents = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sp-core = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sp-api = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sp-timestamp = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sp-consensus = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
sp-state-machine = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/insipx/substrate", branch = "insipx/testing-0.8.26-1" }
